k8s/mongo-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-user
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-user
  template:
    metadata:
      labels:
        app: mongo-user
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-user-pvc
