k8s/product-service.yaml
# product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microservices
spec:
  selector:
    app: product
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
