k8s/user-service.yaml
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices
spec:
  selector:
    app: user
  ports:
    - port: 4000
      targetPort: 4000
  type: NodePort
